Added "Mandatory Variation" in "Product"

--- a/product/templates/product/cart.html
+++ b/product/templates/product/cart.html
@@ -1,7 +1,7 @@
 {% extends 'index.html' %}
 {% load filters %}
 
-{% block title %}Cart{% endblock %}
+{% block title %}Cart | {% endblock %}
 
 {% block content %}
 {% if cart %}
