--- a/product/templates/product/detail.html
+++ b/product/templates/product/detail.html
@@ -1,6 +1,6 @@
 {% extends 'index.html' %}
 {% load filters %}
-{% block title %}{{ order.name }} | {% endblock %}
+{% block title %}{{ product.name }} | {% endblock %}
 
 {% block content %}
 <div class="row">
