--- a/product/templates/product/list.html
+++ b/product/templates/product/list.html
@@ -9,10 +9,9 @@
 
             {% for product in products %}
             <div class="card">
-
                 {% if product.image %}
-                <a href="{{product.slug}}">
-                    <img class="card-img-top" src="{{product.image.url}}" alt="{{product.name}}">
+                <a href="{% url 'product:details' product.slug %}">
+                    <img class="card-img-top" src="{{ product.image.url }}" alt="{{ product.name }}">
                 </a>
                 {% endif %}
 
@@ -38,7 +37,7 @@
                     </div>
                 </div>
                 <div class="card-footer bg-transparent border-top-light-custom text-center">
-                    <a href="{{product.slug}}" class="btn btn-primary btn-sm m-1 btn-block">
+                    <a href="{% url 'product:details' product.slug %}" class="btn btn-primary btn-sm m-1 btn-block">
                         <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                         Buy
                     </a>
